agregando funcionalidad de ganancias por usuarios
